--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-10  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2007-09-10  Ani Peter  <peter.ani@gmail.com>
 
 	* ml.po: Updated Malayalam Translation
