--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-11  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-module.c:
+	Fix valgrind warning on shutdown (#346401)
+
 2007-09-10  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-thumbnails.[ch]:
