Revert. We're in hard code freeze.
2007-09-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-module.c:
	Revert. We're in hard code freeze.


svn path=/trunk/; revision=13140

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2007-09-11  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-module.c:
+	Revert. We're in hard code freeze.
+	
+2007-09-11  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-module.c:
 	Fix valgrind warning on shutdown (#346401)
 
 2007-09-10  Alexander Larsson  <alexl@redhat.com>
