Georgian language updates
svn path=/trunk/; revision=13142

--- a/po/ka.po
+++ b/po/ka.po
@@ -1,14 +1,14 @@
-# translation of ka.po to Georgian
+# translation of nautilus.po to Georgian
 # Georgian Translation for Nautilus.
 # Copyright © 2007 Gnome i18n Project for Georgian.
 #
 # Vladimer Sichinava ვლადიმერ სიჭინავა <vsichi@gnome.org>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: ka\n"
+"Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-07 12:16+0200\n"
-"PO-Revision-Date: 2007-09-07 12:19+0200\n"
+"PO-Revision-Date: 2007-09-13 03:21+0200\n"
 "Last-Translator: Vladimer Sichinava ვლადიმერ სიჭინავა <vsichi@gnome.org>\n"
 "Language-Team: Georgian <http://mail.gnome.org/mailman/listinfo/gnome-ge-list>\n"
 "MIME-Version: 1.0\n"
@@ -1731,6 +1731,8 @@ msgid ""
 "In order to regain the free space on this device the trash must be emptied. "
 "All items in the trash will be permanently lost. "
 msgstr ""
+"ტომზე ადგილის განთავისუფლების მიზნით საჭიროა სანაგვე ყუთის დაცარიელება. "
+"ყველა წაშლილი ელემენტი სამუდამოდ დაიკარგება."
 
 #: ../libnautilus-private/nautilus-file-operations.c:3026
 msgid "Don't Empty Trash"
@@ -2482,7 +2484,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:6946
 #: ../src/nautilus-trash-bar.c:132
 msgid "Delete all items in the Trash"
-msgstr "სანაგვიდან ყველა ელემენტის წაშლა"
+msgstr "სანაგვედან ყველა ელემენტის წაშლა"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:797
 #: ../src/nautilus-desktop-window.c:246 ../src/nautilus-pathbar.c:1122
