--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-13 Pramod Raghavendra <pramodleo@yahoo.co.uk>
+
+        * kn.po: Updated Kannada translation.
+	* LINGUAS: Added Kannada (kn) to the list of languages.
+
 2007-09-12 Maxim Dziumanenko <dziumanenko@gmail.com>
 
 	* uk.po: Update Ukrainian translation.
