--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-13  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Sohaib Afifi.
+
 2007-09-13 Pramod Raghavendra <pramodleo@yahoo.co.uk>
 
         * kn.po: Updated Kannada translation.
