--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-14  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Translation improved.
+
 2007-09-13  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Sohaib Afifi.
