--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-15  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Young-Ho Cha.
+
 2007-09-14  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Translation improved.
