libnautilus-private/apps_nautilus_preferences.schemas.in Added translator
2007-09-14  Alexander Shopov  <ash@contact.bg>

	* libnautilus-private/apps_nautilus_preferences.schemas.in
	Added translator visible comment for difference
	between date_changed and date_modified.

svn path=/trunk/; revision=13148

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-14  Alexander Shopov  <ash@contact.bg>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in
+	Added translator visible comment for difference
+	between date_changed and date_modified.
+
 2007-09-11  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-module.c:
