Updated Romanian translation
2007-09-15  Mugurel Tudor  <mugurelu@gnome.ro>

	* ro.po: Updated Romanian translation

svn path=/trunk/; revision=13150

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-15  Mugurel Tudor  <mugurelu@gnome.ro>
+
+	* ro.po: Updated Romanian translation.
+
 2007-09-15  Andre Klapper  <a9016009@gmx.de>
 
 	* sk.po: Updated Slovak translation on behalf of Peter Tuharsky
