Updated Greek translation
svn path=/trunk/; revision=13151

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-15 Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek Translation.
+
 2007-09-15  Mugurel Tudor  <mugurelu@gnome.ro>
 
 	* ro.po: Updated Romanian translation.
