--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-15  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* ru.po: Updated Russian translation.
+
 2007-09-15 Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek Translation.
