Updated Russian translation.
2007-09-15  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* ru.po: Updated Russian translation.



svn path=/trunk/; revision=13154

--- a/po/ru.po
+++ b/po/ru.po
@@ -2788,18 +2788,18 @@ msgstr[2] " (всего %d элементов)"
 #, c-format
 msgid "%d item selected"
 msgid_plural "%d items selected"
-msgstr[0] "%d элемент выделен (%s)"
-msgstr[1] "%d элемента выделено (%s)"
-msgstr[2] "%d элементов выделено (%s)"
+msgstr[0] "%d элемент выделен"
+msgstr[1] "%d элемента выделено"
+msgstr[2] "%d элементов выделено"
 
 #. Folders selected also, use "other" terminology
 #: ../src/file-manager/fm-directory-view.c:2233
 #, c-format
 msgid "%d other item selected"
 msgid_plural "%d other items selected"
-msgstr[0] "%d другой элемент выделен (%s)"
-msgstr[1] "%d других элемента выделено (%s)"
-msgstr[2] "%d других элементов выделено (%s)"
+msgstr[0] "%d другой элемент выделен"
+msgstr[1] "%d других элемента выделено"
+msgstr[2] "%d других элементов выделено"
 
 #. This is marked for translation in case a localiser
 #. * needs to use something other than parentheses. The
