--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-16  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2007-09-16  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
