--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-17  Amitakhya Phukan <amitakhya@svn.gnome.org>
+
+	* LINGUAS: Added as to LINGUAS.
+	* as.po: Added and updated assamese translations.
+
 2007-09-16  Inaki Larranaga Murgoitio  <dooteo@zundan.com>
 
         * eu.po: Updated Basque translation.
