--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-17  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Sohaib Afifi.
+
 2007-09-17  Amitakhya Phukan <amitakhya@svn.gnome.org>
 
 	* LINGUAS: Added as to LINGUAS.
