Translation updated by Wouter Bolsterlee.
2007-09-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Translation updated by Wouter Bolsterlee.

svn path=/trunk/; revision=13162

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2007-09-17  Djihed Afifi <djihed@gmail.com> 
+2007-09-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* nl.po: Translation updated by Wouter Bolsterlee.
+
+2007-09-17  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Sohaib Afifi.
 
@@ -9,7 +13,7 @@
 
 2007-09-16  Inaki Larranaga Murgoitio  <dooteo@zundan.com>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2007-09-16  Daniel Nylander <po@danielnylander.se>
 
@@ -35,7 +39,7 @@
 2007-09-15  Andre Klapper  <a9016009@gmx.de>
 
 	* sk.po: Updated Slovak translation on behalf of Peter Tuharsky
-        <tuharsky@misbb.sk>.
+	<tuharsky@misbb.sk>.
 
 2007-09-15  Changwoo Ryu  <cwryu@debian.org>
 
@@ -45,13 +49,13 @@
 
 	* ja.po: Translation improved.
 
-2007-09-13  Djihed Afifi <djihed@gmail.com> 
+2007-09-13  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Sohaib Afifi.
 
 2007-09-13 Pramod Raghavendra <pramodleo@yahoo.co.uk>
 
-        * kn.po: Updated Kannada translation.
+	* kn.po: Updated Kannada translation.
 	* LINGUAS: Added Kannada (kn) to the list of languages.
 
 2007-09-12 Maxim Dziumanenko <dziumanenko@gmail.com>
@@ -75,8 +79,8 @@
 	* hu.po: Translation updated.
 
 2007-09-07  Jovan Naumovski  <jovan@lugola.net>
- 
- 	 * mk.po: Updated Macedonian translation.
+
+	 * mk.po: Updated Macedonian translation.
 
 2007-09-03  Andre Klapper  <a9016009@gmx.de>
 
@@ -86,13 +90,13 @@
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
 
-2007-09-03   Clytie Siddall <clytie@riverland.net.au>
+2007-09-03  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
 
 2007-09-02  Jovan Naumovski  <jovan@lugola.net>
- 
- 	 * mk.po: Updated Macedonian translation.
+
+	 * mk.po: Updated Macedonian translation.
 
 2007-08-29  I. Felix <ifelix@svn.gnome.org>
 
@@ -202,8 +206,8 @@
 	* de.po: Updated German translation.
 
 2007-08-12  Jovan Naumovski  <jovan@lugola.net>
- 
- 	 * mk.po: Updated Macedonian translation.
+
+	 * mk.po: Updated Macedonian translation.
 
 2007-08-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
@@ -248,7 +252,7 @@
 
 2007-08-05  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation 
+	* es.po: Updated Spanish translation
 
 2007-08-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
@@ -292,7 +296,7 @@
 
 2007-07-24  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+	* es.po: Updated Spanish translation
 
 2007-07-24  Priit Laes  <plaes@svn.gnome.org>
 
@@ -348,8 +352,8 @@
 	* bn_IN.po: Updated Bengali India Translation.
 
 2007-07-03  Jovan Naumovski  <jovan@lugola.net>
- 
- 	 * mk.po: Updated Macedonian translation.
+
+	 * mk.po: Updated Macedonian translation.
 
 2007-07-02  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
 
@@ -419,11 +423,11 @@
 
 2007-06-19  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+	* es.po: Updated Spanish translation
 
 2007-06-18  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+	* es.po: Updated Spanish translation
 
 2007-06-18  Priit Laes  <plaes@svn.gnome.org>
 
@@ -461,7 +465,7 @@
 2007-05-29  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, by
-	         Daniel Schindler <daniel@logic-co.de>
+	Daniel Schindler <daniel@logic-co.de>
 
 2007-05-28  Ihar Hrachyshka <iharh@gnome.org>
 
