--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@
 #
 # Copyright (C) 2000 Free Software Foundation, Inc.
 #
-# Dennis Smit <synap@area101.penguin.nl>, 2001. (Fixes / >>LITTLE<< update).
+# Dennis Smit <synap@area101.penguin.nl>, 2001.
 # Dirk-Jan C. Binnema <dirkjan@gnome.org>, 2001.
 # Mendel Mobach <mendel@mobach.nl>, 2000.
 # Almer S. Tigelaar <almer1@dds.nl>, 2000. (I only did a little correcting here and there)
@@ -26,9 +26,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-04 06:12+0100\n"
-"PO-Revision-Date: 2007-08-04 16:22+0100 \n"
-"Last-Translator: Reinout van Schouwen <reinouts@gnome.org>\n"
+"POT-Creation-Date: 2007-08-14 03:46+0100\n"
+"PO-Revision-Date: 2007-09-17 19:16+0200\n"
+"Last-Translator: Wouter Bolsterlee <wbolster@gnome.org>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -732,7 +732,7 @@ msgid "Network servers icon name"
 msgstr "Pictogramnaam van Netwerkservers"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+msgid "Only show folders in the tree side pane"
 msgstr "Alleen mappen in de boom-zijbalk tonen"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -986,8 +986,8 @@ msgstr "Of een aangepaste standaard zijpaneelachtergrond is ingesteld."
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid "Whether to ask for confirmation when deleting files, or emptying Trash"
 msgstr ""
-"Al dan niet om bevestiging vragen bij het verwijderen van bestanden "
-"danwel het legen van de prullenbak"
+"Al dan niet om bevestiging vragen bij het verwijderen van bestanden danwel "
+"het legen van de prullenbak"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:112
 msgid "Whether to enable immediate deletion"
@@ -2872,8 +2872,7 @@ msgstr "Kan items niet in de prullenbak gooien. Wilt u ze direct verwijderen?"
 #, c-format
 msgid "The selected item could not be moved to the Trash"
 msgid_plural "The %d selected items could not be moved to the Trash"
-msgstr[0] ""
-"Het geselecteerde item kon niet in de prullenbak gegooid worden."
+msgstr[0] "Het geselecteerde item kon niet in de prullenbak gegooid worden."
 msgstr[1] ""
 "De %d geselecteerde items konden niet in de prullenbak gegooid worden."
 
@@ -5366,8 +5365,8 @@ msgstr "_Zijpaneel"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
-msgstr "Zichtbaarheid van de vensterzijbalk veranderen"
+msgid "Change the visibility of this window's side pane"
+msgstr "Zichtbaarheid van de vensterzijbalk van dit venster veranderen"
 
 #. is_active
 #. name, stock id
