--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.20.0 are:
+* Load thumbnails asynchronously
+* Support direct save DnD (XDS)
+* Fix up octal permission display
+* Store window keep-above and stickines state across sessions
+
 Major changes in 2.19.91 are:
 * Be more robust against broken extensions
 * Set current working directory right on desktop when running scripts
