--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-18  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS: 
+	* configure.in:
+	Bump version to 2.20.0
+
 2007-09-14  Alexander Shopov  <ash@contact.bg>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in
