--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-09-18  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.20.0 ===
+
+2007-09-18  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS: 
 	* configure.in:
 	Bump version to 2.20.0
