--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.20.0 ===
+
 2007-09-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* nl.po: Translation updated by Wouter Bolsterlee.
