Updated Serbian translations.
svn path=/trunk/; revision=13182

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-19  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Minor updates.
+
 === nautilus 2.20.0 ===
 
 2007-09-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
