--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-10 22:25+0200\n"
-"PO-Revision-Date: 2007-09-10 23:34+0200\n"
+"PO-Revision-Date: 2007-09-19 16:17+0200\n"
 "Last-Translator: Danilo Šegan <danilo@gnome.org>\n"
 "Language-Team: Serbian (sr) <gnom@prevod.org>\n"
 "MIME-Version: 1.0\n"
@@ -422,7 +422,7 @@ msgstr "Ime za ikonu računara na radnoj površini"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:26
 msgid "Desktop font"
-msgstr "Slovni lik radne površine"
+msgstr "Font radne površine"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:27
 msgid "Desktop home icon name"
@@ -849,7 +849,7 @@ msgstr "Podrazumevana širina bočne površi u novim prozorima."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:92
 msgid "The font description used for the icons on the desktop."
-msgstr "Opis slovnog lika koji se koristi za ikone na radnoj površini."
+msgstr "Opis fonta koji se koristi za ikone na radnoj površini."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:93
 msgid ""
@@ -1890,7 +1890,7 @@ msgstr "Mreža"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:886
 msgid "Fonts"
-msgstr "Slovni likovi"
+msgstr "Fontovi"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:888
 msgid "Themes"
@@ -5843,9 +5843,7 @@ msgstr ""
 msgid ""
 "Nautilus is a graphical shell for GNOME that makes it easy to manage your "
 "files and the rest of your system."
-msgstr ""
-"Nautilus je Gnomova grafička ljuska koja olakšava upravljanje datotekama i "
-"ostatkom sistema."
+msgstr "Nautilus  grafička ljuska za Gnom koja olakšava upravljanje datotekama i ostatkom sistema."
 
 #: ../src/nautilus-window-menus.c:442
 msgid "Copyright © 1999-2007 The Nautilus authors"
