Updated Polish translation by GNOME PL Team.
2007-09-22  Artur Flinta  <aflinta@svn.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.


svn path=/branches/gnome-2-20/; revision=13203

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-22  Artur Flinta  <aflinta@svn.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 === nautilus 2.20.0 ===
 
 2007-09-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
