--- a/po/pl.po
+++ b/po/pl.po
@@ -5403,7 +5403,7 @@ msgstr "Zmień nazwę..."
 
 #: ../src/nautilus-places-sidebar.c:1483
 msgid "_Mount"
-msgstr "Za)montuj"
+msgstr "Za_montuj"
 
 #: ../src/nautilus-places-sidebar.c:1490
 msgid "_Unmount"
