--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-22  Artur Flinta  <aflinta@svn.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2007-09-19  Danilo Šegan  <danilo@gnome.org>
 
 	* sr.po, sr@Latn.po: Minor updates.
