--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-27  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	(async_thumbnail_load_func): Frame asynchronously loaded thumbnails.
+	Fixes #478363.
+
 2007-09-18  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
