Backport from gio-branch, fixes #480608, from Alexander Larsson
2007-10-02  Frederic Crozat  <fcrozat@mandriva.com>

	Backport from gio-branch, fixes #480608, from 
	Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c:
	Don't clear thumbnails and other absolute pathnames from icon
	cache when mime data or icon theme changes. This is to avoid
	flashing and async realoading of all thumbnails.

	* libnautilus-private/nautilus-directory-async.c:
	(mime_db_changed_callback):
	Use the right call to invalidate attributes, so that
	they get re-read correctly.

svn path=/trunk/; revision=13248

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2007-10-02  Frederic Crozat  <fcrozat@mandriva.com>
+
+	Backport from gio-branch, fixes #480608, from 
+	Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	Don't clear thumbnails and other absolute pathnames from icon
+	cache when mime data or icon theme changes. This is to avoid
+	flashing and async realoading of all thumbnails.
+
+	* libnautilus-private/nautilus-directory-async.c:
+	(mime_db_changed_callback):
+	Use the right call to invalidate attributes, so that
+	they get re-read correctly.
+
 2007-09-27  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-factory.c:
