--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-02  Thierry Randrianiriana  <thierryr@svn.gnome.org>
+
+	* mg.po: Updated Malagasy translation.
+
 2007-09-22  Artur Flinta  <aflinta@svn.gnome.org>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
