Fix crash with small fonts (#454884)
2007-10-03  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-sidebar-title.c:
        (update_title_font):
	Fix crash with small fonts (#454884)


svn path=/trunk/; revision=13255

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-03  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-sidebar-title.c:
+        (update_title_font):
+	Fix crash with small fonts (#454884)
+
 2007-10-02  Frederic Crozat  <fcrozat@mandriva.com>
 
 	Backport from gio-branch, fixes #480608, from 
