patch from Joachim Sauer, fix beep when backspace or delete are pressed
2007-10-03  Sebastien Bacher  <seb128@ubuntu.com>

	* libnautilus-private/nautilus-icon-container.c: (key_press_event):
	patch from Joachim Sauer, fix beep when backspace or delete are pressed
	(#452067)

svn path=/trunk/; revision=13257

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-03  Sebastien Bacher  <seb128@ubuntu.com>
+
+	* libnautilus-private/nautilus-icon-container.c: (key_press_event):
+	patch from Joachim Sauer, fix beep when backspace or delete are pressed
+	(#452067)
+
 2007-10-03  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-sidebar-title.c:
