Updated Occitan translation
svn path=/trunk/; revision=13259

--- a/po/oc.po
+++ b/po/oc.po
@@ -2218,7 +2218,7 @@ msgstr ""
 #: ../libnautilus-private/nautilus-program-choosing.c:731
 #, c-format
 msgid "Opening %s"
-msgstr "Dubertura de %s"
+msgstr "Dobertura de %s"
 
 #. TODO: These strings suck pretty badly, but we're in string-freeze,
 #. * and I found these in other places to reuse. We should make them
@@ -2291,7 +2291,7 @@ msgstr "Impossible de trobar \"%s\"."
 #: ../libnautilus-private/nautilus-program-choosing.c:734
 #, c-format
 msgid "Opening %d Item"
-msgstr "Dubertura de %d element"
+msgstr "Dobertura de %d element"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:899
 msgid "Sorry, but you can't execute commands from a remote site."
@@ -3228,12 +3228,12 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:8882
 #, c-format
 msgid "Opening \"%s\"."
-msgstr "Dubertura de \"%s\""
+msgstr "Dobertura de \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:8885
 #, c-format
 msgid "Opening %d item."
-msgstr "Dubertura de %s element."
+msgstr "Dobertura de %s element."
 
 #: ../src/file-manager/fm-directory-view.c:9777
 msgid "Download location?"
@@ -5461,7 +5461,7 @@ msgstr "Copyright © 1999-2007 Los autors de Nautilus"
 #.
 #: ../src/nautilus-window-menus.c:452
 msgid "translator-credits"
-msgstr "La còla occitana de revirada d'Ubuntu, 2007 - ubuntu-l10n-oci@lists.ubuntu.com"
+msgstr "Yannig Marchegay (Kokoyaya) <yannig@marchegay.org)"
 
 #: ../src/nautilus-window-menus.c:455
 msgid "Nautilus Web Site"
