--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-03  Christian Neumair  <cneumair@gnome.org>
+
+        * libnautilus-private/nautilus-module.c:
+	Fix valgrind warning on shutdown (#346401, re-applied).
+
 2007-10-03  Sebastien Bacher  <seb128@ubuntu.com>
 
 	* libnautilus-private/nautilus-icon-container.c: (key_press_event):
