--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-04 Danishka Navin <danishka@gmail.com>
+
+	* si.po: Updated Sinhala translation by Danishka Navin.
+
 2007-09-22  Artur Flinta  <aflinta@svn.gnome.org>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
