2007-10-06 Jovan Naumovski <jovanna@svn.gnome.org> *mk.po: Updated Macedonian translation.
svn path=/branches/gnome-2-20/; revision=13271

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-06  Jovan Naumovski <jovan@lugola.net>
+
+	* mk.po: Minor fixes in Macedonian translation.
+
 2007-10-04 Danishka Navin <danishka@gmail.com>
 
 	* si.po: Updated Sinhala translation by Danishka Navin.
