2007-10-06 Jovan Naumovski <jovanna@svn.gnome.org> *mk.po: Updated Macedonian translation.
svn path=/trunk/; revision=13272

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2007-10-06  Jovan Naumovski  <jovan@lugola.net>
+
+	* mk.po: Minor fixes in Macedonian translation.
 
 2007-10-04 Danishka Navin <danishka@gmail.com>
 
