--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-07  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Fixed French translation.
+
 2007-10-06  Jovan Naumovski <jovan@lugola.net>
 
 	* mk.po: Minor fixes in Macedonian translation.
