Updated French translation by Saïvann Carignan.
2007-10-14  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Saïvann Carignan.

svn path=/branches/gnome-2-20/; revision=13292

--- a/po/fr.po
+++ b/po/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.15.91\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-07 23:09+0200\n"
-"PO-Revision-Date: 2007-10-07 23:09+0200\n"
+"PO-Revision-Date: 2007-10-14 12:02+0200\n"
 "Last-Translator: Stéphane Raimbault <stephane.raimbault@gmail.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -1460,7 +1460,7 @@ msgstr "_Réessayer"
 #: ../libnautilus-private/nautilus-file-operations.c:1214
 #: ../libnautilus-private/nautilus-file-operations.c:1233
 msgid "_Skip"
-msgstr "_Ignorer"
+msgstr "_Conserver"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1137
 #, c-format
@@ -1522,7 +1522,7 @@ msgstr "_Remplacer"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1233
 msgid "S_kip All"
-msgstr "T_out ignorer"
+msgstr "T_out conserver"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1233
 msgid "Replace _All"
