updated hebrew translation
svn path=/trunk/; revision=13310

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-15  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2007-10-06  Jovan Naumovski  <jovan@lugola.net>
 
 	* mk.po: Minor fixes in Macedonian translation.
