--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-27  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
+
+	* be@latin.po: Updated Belarusian Latin translation.
+
 2007-10-23  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Sohaib Afifi.
