Fixed a bug in be@latin.po
svn path=/trunk/; revision=13377

--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -1245,7 +1245,7 @@ msgstr "Z:"
 #. "To" dialog label, source path gets placed next to it in the dialog
 #: ../libnautilus-private/nautilus-file-operations.c:490
 msgid "To:"
-msgstr "Da:"
+msgstr "U:"
 
 #: ../libnautilus-private/nautilus-file-operations.c:671
 #: ../libnautilus-private/nautilus-file-operations.c:719
