--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-28  Mohammad DAMT  <mdamt@mnots.eu>
+
+	* id.po: Update Indonesian translation by Huda Toriq <hudatoriq at 
+	gmail.com>.
+
 2007-10-25  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
 	* be@latin.po: Updated Belarusian Latin translation.
